# radar-core

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: build-prod.yml  ci-cd-pipeline.yml
auto/: cleanup.cmd  dc.cmd  lint.cmd  update.cmd
auto/once/: new_uv_venv.cmd
database/init/: 01_radar_schema.sql
db_init/: 1_create_web_user.sh  2_create_schema.sql  3_seed_data.sql
docker/: Dockerfile  docker-compose.core.yml  docker-compose.e2e.yml  docker-compose.mb.yml
envs/: .env.core.template  .env.mb.template  .env.template
src/radar_core/: .env.template  __init__.py  __main__.py  analyzer.py  database.py  settings.py  settings.yml
src/radar_core/domain/: __init__.py  types.py
src/radar_core/domain/strategies/: __init__.py  base_strategy.py  constants.py  ma.py  rsi2b.py  rsi2b_fast.py  rsirc.py  rsirc_fast.py
src/radar_core/domain/technical/: __init__.py  momentum.py  volatility.py
src/radar_core/helpers/: __init__.py  constants.py  datetime_helper.py  log_helper.py
src/radar_core/infrastructure/: __init__.py  price_provider.py  security_repository.py
src/radar_core/infrastructure/crud/: __init__.py  base_crud.py  daily_data_crud.py  ratio_crud.py  security_crud.py  strategy_crud.py
src/radar_core/infrastructure/integration/: __init__.py  integration_service.py  yahoo_service.py
src/radar_core/models/: __init__.py  base_model.py  daily_data.py  ratios.py  securities.py  strategies.py  synonyms.py
